fix: More dark mode improvements

--- a/src/renderer/styles/app.less
+++ b/src/renderer/styles/app.less
@@ -26,10 +26,6 @@
   p, ul li, label {
     user-select: none;
   }
-
-  nav#site_nav {
-    width: 300px;
-  }
 }
 
 .Emoji {
