--- a/src/renderer/styles/sidebar.less
+++ b/src/renderer/styles/sidebar.less
@@ -33,60 +33,8 @@
       background-color: transparent;
   }
 
-  .MenuTitle {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    font-size: 1rem;
-    font-weight: 700;
-  }
-
   .StillLoading {
     opacity: .5;
-  }
-
-  nav#site_nav ul a {
-    padding: .25rem 0 .25rem .25rem;
-  }
-
-  .MenuTitle-Browser .ts_icon {
-    color: @browser_color;
-  }
-
-  .MenuTitle-Renderer .ts_icon {
-    color: @renderer_color;
-  }
-
-  .MenuTitle-Webapp .ts_icon {
-    color: @webapp_color;
-  }
-
-  .MenuTitle-Preload .ts_icon {
-    color: @preload_color;
-  }
-
-  .MenuTitle-Call .ts_icon {
-    color: @call_color;
-  }
-
-  .ts_icon {
-    margin-right: .75rem;
-  }
-
-  a > i.ts_icon_file.LogFile {
-    color: white;
-  }
-
-  a:hover {
-    background-color: rgba(255, 255, 255, .1);
-    border-radius: 5px;
-    padding-left: 5px;
-  }
-
-  a.Selected {
-    background-color: rgba(255, 255, 255, .2);
-    border-radius: 5px;
-    padding-left: 5px;
   }
 }
 
@@ -96,4 +44,5 @@
 
 .bp3-dark .Sidebar {
   background-color: @dark-gray2;
+  box-shadow: inset -9px 0px 15px 9px #00000020;
 }
